[Refactor] Simplify handling of InstancePartitions (#17944)